# ims

./: .gitignore  .gitmodules  Android.bp  README.md
app/: build.gradle
app/jni/: Android.bp  CMakeLists.txt  rnnoise_jni.c  webrtc_aec_jni.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/me/phh/ims/: OutgoingCallFailureCallbackPolicy.kt  PhhImsBroadcastReceiver.kt  PhhImsService.kt  PhhImsSms.kt  PhhMmTelFeature.kt  Rnnoise.kt  SipImsReasonCodeMapper.kt
app/src/main/java/me/phh/sip/: ImsNetworkRequestRestarter.kt  ImsNetworkState.kt  ImsReconnectController.kt  ImsTransportGuard.kt  MainSipFlowRecoveryPolicy.kt  OutgoingDialTargetNormalizer.kt  RegistrationCellInfoLogger.kt  SipAccessNetworkHeaders.kt  SipAlternativeService.kt  SipAmrRtpPayload.kt  SipAudioCodec.kt  SipAudioCodecFactory.kt  SipAudioCodecNegotiator.kt  SipAudioRecordFactory.kt  SipAudioRecordRouting.kt  SipAudioRecordStarter.kt  SipCallSetupTimers.kt  SipCarrierDatabase.kt  SipCarrierDatabaseXml.kt  SipCarrierDiagnostics.kt  SipCarrierPolicyOverlay.kt  SipCarrierPolicyXml.kt  SipCarrierSettings.kt  SipChallenge.kt  SipCommonHeaderBuilder.kt  SipConnection.kt  SipContactHeaders.kt  SipDialogHeaderBuilder.kt  SipDispatcher.kt  SipDownlinkAudioCleanup.kt  SipDownlinkAudioDecoder.kt  SipDownlinkPcmPlayout.kt  SipEchoCanceler.kt  SipEchoCancellationSession.kt  SipHandler.kt  SipHeaderValueParser.kt  SipInDialogInvite.kt  SipIncomingIdentity.kt  SipIncomingInviteDialogSetup.kt  SipIncomingInviteOfferParser.kt  (+35 more)
app/src/main/res/xml/: sip_carrier_database.xml  sip_carrier_policies.xml
app/src/test/java/me/phh/ims/: OutgoingCallFailureCallbackPolicyTest.kt  SipImsReasonCodeMapperTest.kt
app/src/test/java/me/phh/sip/: MainSipFlowRecoveryPolicyTest.kt  SipAccessNetworkHeadersTest.kt  SipAlternativeServiceTest.kt  SipCarrierDatabaseTest.kt  SipCarrierPolicyOverlayTest.kt  SipCarrierRuntimeIntegrationTest.kt  SipDispatcherTest.kt  SipHeaderValueParserTest.kt  SipIncomingIdentityTest.kt  SipMessageTest.kt  SipOutgoingCallConnectionLogsTest.kt  SipReaderTest.kt  SipRegisterRefreshResponsePolicyTest.kt  SipRegisteredIdentityTest.kt  SipRegistrationFailurePolicyTest.kt  SipRemoteDialogTerminationTest.kt  SipSessionTimerScheduleTest.kt  SipStatusCodeRuleTest.kt  SipUdpResponseRoutingTest.kt
docs/: carrier-database-runtime.md  carrier-database.md  carrier-policies.md
tools/: import_samsung_ims_database.py  test_carrier_database.py
